--- a/params.yaml
+++ b/params.yaml
@@ -1,5 +1,22 @@
+download_script_file: src/download.py
+
 download:
-  kaggle_dataset: manidevesh/hr-dataset-analysis
-  kaggle_file: "HR_DataSet.csv"
-  download_folder: data
-  download_file: 'raw_data.csv'
+  kaggle_dataset: manidevesh/hr-dataset-analysis  # The Kaggle file URL
+  kaggle_file: "HR_DataSet.csv"                   # The file name 
+  download_folder: data                           # The folder to download the file to
+  download_file: "raw_data.csv"                   # The new name
+
+preprocess_script_file: src/preprocess.py
+
+preprocess:
+  input_file_path: "data/raw_data.csv"                     # The raw file path
+  output_file_path: "data/preprocessed_data.csv"           # The preprocessed file path
+  rename_map:                                              # New names for the columns
+    time_spend_company: time_spend_in_company
+    Work_accident: had_work_accidents
+    left: left_or_not
+    promotion_last_5years: promoted_last_5_years
+    Department: department
+  keep_duplicates: True                                     # Should one keep the duplicate rows
+
+#train_script_file: src/train.py
