--- a/dvc.yaml
+++ b/dvc.yaml
@@ -9,12 +9,12 @@ stages:
     - download.download_folder
     - download.download_file
     outs:
-    - data/raw_data.csv #${download.download_folder}/${download.download_file}
+    - ${download.download_folder}/${download.download_file} # data/raw_data.csv #
   preprocess:
     cmd: python ${preprocess_script_file}
     deps:
     - ${preprocess_script_file}
-    - data/raw_data.csv #${download.download_folder}/${download.download_file} #${preprocess.input_file_path}
+    - ${download.download_folder}/${download.download_file} #${preprocess.input_file_path} data/raw_data.csv #
     params:
     - preprocess.input_file_path
     - preprocess.output_file_path
