--- a/params.yaml
+++ b/params.yaml
@@ -3,23 +3,24 @@ download_script_file: src/download.py
 download:
   kaggle_dataset: manidevesh/hr-dataset-analysis  # The Kaggle file URL
   kaggle_file: "HR_DataSet.csv"                   # The file name 
-  download_folder: &input_folder data                           # The folder to download the file to
-  download_file: &input_file "raw_data.csv"                   # The new name
+  download_folder: &input_folder data             # The folder to download the file to
+  download_file: &input_file "raw_data.csv"       # The new name
 
 preprocess_script_file: src/preprocess.py
 
 preprocess:
-  input_folder: *input_folder #"data/raw_data.csv"                     # The raw file path
-  input_file: *input_file
-  output_file_path: "data/preprocessed_data.csv"           # The preprocessed file path
-  rename_map:                                              # New names for the columns
+  input_folder: *input_folder #"data/raw_data.csv"                     # The raw file folder
+  input_file: *input_file                                              # The raw file name
+  output_file_path: &output_file_path "data/preprocessed_data.csv"     # The preprocessed file path
+  rename_map:                                                          # New names for the columns
     time_spend_company: time_spend_in_company
     Work_accident: had_work_accidents
     left: left_or_not
     promotion_last_5years: promoted_last_5_years
     Department: department
-  keep_duplicates: True                                     # Should one keep the duplicate rows
+  keep_duplicates: True                                                # Should one keep the duplicate rows or not
 
-train_script_file: src/train.py
+# train_script_file: src/train.py
 
-#train:
+# train:
+#   file_path: *output_file_path
