--- a/params.yaml
+++ b/params.yaml
@@ -25,10 +25,17 @@ train_script_file: src/train.py
 train:
   file_path: *output_file_path
   prediction_column: *prediction_column
+  test_X_file_path: &test_X_file_path "data/test_X.csv"
+  test_y_file_path: &test_y_file_path "data/test_y.csv"
   random_state: 42
   max_depth: [2, 4, 1]
   min_samples_split: [6, 15, 4] 
   n_estimators: [30, 61, 10]
   learning_rate: [0.8, 1.3, 0.2]
-  model_file_path: models/model.pkl
+  model_file_path: &model_file_path models/model.pkl
+
+# evaluate_script_file: src/evaluate.py
+
+# evaluate:
+#   model_file_path: &model_file_path
 
