--- a/params.yaml
+++ b/params.yaml
@@ -34,8 +34,10 @@ train:
   learning_rate: [0.8, 1.3, 0.2]
   model_file_path: &model_file_path models/model.pkl
 
-# evaluate_script_file: src/evaluate.py
+evaluate_script_file: src/evaluate.py
 
-# evaluate:
-#   model_file_path: &model_file_path
+evaluate:
+  model_file_path: *model_file_path
+  test_X_file_path: *test_X_file_path
+  test_y_file_path: *test_y_file_path
 
