Added mlflow_experiment_name_file_path and fixed a bug in the evaluate.oy graphs

--- a/params.yaml
+++ b/params.yaml
@@ -1,4 +1,5 @@
 set_experiment_name_script_file: src/set_experiment_name.py
+mlflow_experiment_name_file_path: &mlflow_experiment_name_file_path "mlflow_experiment_name.yaml"
 
 download_script_file: src/download.py
 
