--- a/dvc.yaml
+++ b/dvc.yaml
@@ -5,7 +5,7 @@ stages:
     deps:
     - ${set_experiment_name_script_file}
     outs:
-    - mlflow_experiment_name.yaml
+    - ${mlflow_experiment_name_file_path}
 
   download:
     cmd: python ${download_script_file}
@@ -21,20 +21,23 @@ stages:
     cmd: python ${preprocess_script_file}
     deps:
     - params.yaml
+    - ${mlflow_experiment_name_file_path}
     - ${preprocess_script_file}
     - ${download.download_folder}/${download.download_file} 
     params:
     - preprocess 
     outs:
-    - ${preprocess.output_file_path}
+    - ${preprocess.output_current_data_file_path}
+    - ${preprocess.output_future_data_file_path}
     - ${preprocess.onehot_name_dictionary_file_path}
 
   train:
     cmd: python ${train_script_file}
     deps:
     - params.yaml
+    - ${mlflow_experiment_name_file_path}
     - ${train_script_file}
-    - ${preprocess.output_file_path}     
+    - ${preprocess.output_current_data_file_path}     
     params:
     - train 
     outs:
@@ -46,10 +49,10 @@ stages:
     cmd: python ${evaluate_script_file}
     deps:
     - params.yaml
+    - ${mlflow_experiment_name_file_path}
     - ${evaluate_script_file}
     - ${train.test_X_file_path}
     - ${train.test_y_file_path}    
     - ${train.model_file_path}
     params:
     - evaluate 
-    #outs:
