Changed cuurent to past, Added 'Loading Python libraries' and modified the kwargs references in the scripts

--- a/params.yaml
+++ b/params.yaml
@@ -16,7 +16,7 @@ preprocess_script_file: src/preprocess.py
 preprocess:
   input_folder: *input_folder
   input_file: *input_file
-  output_current_data_file_path: &output_current_data_file_path "data/preprocessed_current_data.csv"     # The preprocessed current data file path
+  output_past_data_file_path: &output_past_data_file_path "data/preprocessed_past_data.csv"     # The preprocessed past data file path
   output_future_data_file_path: &output_future_data_file_path "data/preprocessed_future_data.csv"       # The preprocessed future data file path
   rename_map:                                                          # New names for the columns
     time_spend_company: time_spend_in_company
@@ -25,7 +25,7 @@ preprocess:
     promotion_last_5years: promoted_last_5_years
     Department: department
   keep_duplicates: true                                                # Should one keep the duplicate rows or not
-  # Name of the column to influence the split into the "future" and the "current" subsets ()
+  # Name of the column to influence the split into the "future" and the "past" subsets ()
   column_impacting_the_split: satisfaction_level
   # What percentage of the preprocessed data will go to the 'future' subset
   future_subset_size: 0.1
@@ -41,7 +41,7 @@ preprocess:
 train_script_file: src/train.py
 
 train:
-  file_path: *output_current_data_file_path
+  file_path: *output_past_data_file_path
   prediction_column: *prediction_column
   test_X_file_path: &test_X_file_path "data/test_X.csv"                # The full path of the test dataset (features)
   test_y_file_path: &test_y_file_path "data/test_y.csv"                # The full path of the test dataset (targets)
@@ -62,4 +62,8 @@ evaluate:
   n_repeats: 10
   random_state: 42
   onehot_name_dictionary_file_path: *onehot_name_dictionary_file_path
+
+evidentlyai:
+  past_data_file_path: *output_past_data_file_path
+  future_data_file_path: *output_future_data_file_path
 
