FixAdded two more lines to the remote credentials part in ci_cd.yaml

--- a/.github/workflows/ci_cd.yaml
+++ b/.github/workflows/ci_cd.yaml
@@ -33,7 +33,8 @@ jobs:
           set -e
 
           echo 'Setting the remote DVC (DagsHub) credentials ...'
-          if ! (dvc remote modify origin --local auth basic &&
+          if ! (dvc remote add origin s3://dvc &&
+                dvc remote modify origin endpointurl https://dagshub.com/skuperst/Full-MLOps-Pipeline.s3 &&
                 dvc remote modify -v origin --local access_key_id ${{ secrets.DAGSHUB_USER_NAME }} &&
                 dvc remote modify -v origin --local secret_access_key ${{ secrets.DAGSHUB_PASSWORD }}); then
             echo 'DagsHub identification failed! Exiting...' 
