--- a/.github/workflows/ci_cd.yaml
+++ b/.github/workflows/ci_cd.yaml
@@ -49,6 +49,11 @@ jobs:
       #       echo 'The raw data was successfully pulled from the remote DagsHub repository.' 
       #     fi
 
+      - name: Create .env file in the script's directory
+        run: |
+          echo "KAGGLE_USERNAME=${{ secrets.KAGGLE_USERNAME }}" > .env
+          echo "KAGGLE_KEY=${{ secrets.KAGGLE_KEY }}" >> .env
+
       # Force DVC repro to re-run all of the existing steps
       - name: Run the full DVC pipeline
         run: |
