--- a/.github/workflows/ci_cd.yaml
+++ b/.github/workflows/ci_cd.yaml
@@ -49,10 +49,14 @@ jobs:
       #       echo 'The raw data was successfully pulled from the remote DagsHub repository.' 
       #     fi
 
-      - name: Create .env file in the script's directory
+      # (Re)create local .env file looping over secrets
+      - name: Create .env file dynamically
         run: |
-          echo "KAGGLE_USERNAME=${{ secrets.KAGGLE_USERNAME }}" > .env
-          echo "KAGGLE_KEY=${{ secrets.KAGGLE_KEY }}" >> .env
+          echo "Creating .env file..."
+          for secret in DAGSHUB_PASSWORD DAGSHUB_PASSWORD DAGSHUB_USER_NAME EVIDENTLY_PROJECT_ID EVIDENTLY_TOKEN KAGGLE_KEY KAGGLE_USERNAME MLFLOW_TRACKING_URI; do
+            echo "$secret=${{ secrets[$secret] }}" >> .env
+          done
+          echo ".env file created."
 
       # Force DVC repro to re-run all of the existing steps
       - name: Run the full DVC pipeline
