Added another version of the credential setting in ci_cd.yaml

--- a/.github/workflows/ci_cd.yaml
+++ b/.github/workflows/ci_cd.yaml
@@ -39,8 +39,14 @@ jobs:
       #     else
       #       echo 'Connection verified ...'
       #     fi
-
-      #     dvc status | grep -i "missing" | awk '{print $1}'
+      # echo 'Setting the remote DVC (DagsHub) credentials ...'
+      # if ! (dvc remote add origin s3://dvc &&
+      #       dvc remote modify origin endpointurl https://dagshub.com/skuperst/Full-MLOps-Pipeline.s3 &&
+      #       dvc remote modify -v origin --local access_key_id ${{ secrets.DAGSHUB_USER_NAME }} &&
+      #       dvc remote modify -v origin --local secret_access_key ${{ secrets.DAGSHUB_PASSWORD }}); then
+      #   echo 'DagsHub identification failed! Exiting...' 
+      #   exit 1 
+      # fi
 
       #     echo 'Attempting to pull raw data from DVC ...'
       #     if ! (dvc pull -v data/raw_data.csv); then
@@ -53,7 +59,7 @@ jobs:
       - name: Create .env file dynamically
         run: |
           echo "Creating .env file..."
-          
+
           echo "DAGSHUB_PASSWORD=${{ secrets.DAGSHUB_PASSWORD }}" >> .env
           echo "DAGSHUB_USER_NAME=${{ secrets.DAGSHUB_USER_NAME }}" >> .env
           echo "EVIDENTLY_PROJECT_ID=${{ secrets.EVIDENTLY_PROJECT_ID }}" >> .env
@@ -64,6 +70,36 @@ jobs:
 
           echo ".env file created."
 
+      - name: Set up DVC authentication and pull data
+        run: |
+          set -e
+      
+          echo 'Checking if the DVC remote is configured...'
+          if dvc remote list | grep -q "origin"; then
+            echo "Remote 'origin' found."
+          else
+            echo "Remote 'origin' not found. Adding remote with credentials..."
+            dvc remote add -d origin <remote-url>
+            dvc remote modify origin --local access_key_id $DAGSHUB_USER_NAME
+            dvc remote modify origin --local secret_access_key $DAGSHUB_PASSWORD
+          fi
+    
+          echo 'Verifying DVC authentication...'
+          if ! dvc status; then
+            echo 'DVC authentication failed. Exiting...'
+            exit 1
+          else
+            echo 'DVC authentication successful.'
+          fi
+      
+          echo 'Pulling data from DVC...'
+          if ! dvc pull data/raw_data.csv -v; then
+            echo 'No raw data file found on DagsHub. No worries, the data will be downloaded from the Kaggle API.'
+          else
+            echo 'The raw data was successfully pulled from the remote DagsHub repository.'
+          fi
+        
+          
       # Force DVC repro to re-run all of the existing steps
       - name: Run the full DVC pipeline
         run: |
@@ -72,11 +108,4 @@ jobs:
 
 
 
-# echo 'Setting the remote DVC (DagsHub) credentials ...'
-# if ! (dvc remote add origin s3://dvc &&
-#       dvc remote modify origin endpointurl https://dagshub.com/skuperst/Full-MLOps-Pipeline.s3 &&
-#       dvc remote modify -v origin --local access_key_id ${{ secrets.DAGSHUB_USER_NAME }} &&
-#       dvc remote modify -v origin --local secret_access_key ${{ secrets.DAGSHUB_PASSWORD }}); then
-#   echo 'DagsHub identification failed! Exiting...' 
-#   exit 1 
-# fi
+
