--- a/params.yaml
+++ b/params.yaml
@@ -9,24 +9,7 @@ download:
   kaggle_dataset: manidevesh/hr-dataset-analysis  # The Kaggle file URL
   kaggle_file: "HR_DataSet.csv"                   # The original file name 
   download_folder: &input_folder data             # The folder to download the file to
-  download_file: &input_file "raw_data.csv"       # The new name
-
-preprocess_script_file: src/preprocess.py
-
-preprocess:
-  input_folder: *input_folder
-  input_file: *input_file
-  output_reference_data_file_path: &output_reference_data_file_path "data/preprocessed_reference_data.csv"     # The preprocessed reference data file path
-  output_current_data_file_path: &output_current_data_file_path "data/preprocessed_current_data.csv"       # The preprocessed current data file path
-  rename_map:                                                          # New names for the columns
-    number_project: number_of_projects
-    time_spend_company: time_spend_in_company
-    Work_accident: had_work_accidents
-    left: &prediction_column left_or_not
-    promotion_last_5years: promoted_last_5_years
-    Department: department
-  prediction_column: *prediction_column
-  keep_duplicates: true                                                # Should one keep the duplicate rows or not
+  download_file: &input_file "modified_raw_data.csv"       # The new name
   # Name of the column to influence the split into the "current" and the "reference" subsets ()
   column_impacting_the_split: satisfaction_level
   # What percentage of the preprocessed data will go to the 'current' subset
@@ -36,6 +19,25 @@ preprocess:
   prob_coeff: 1.5
   # Name of the column to control the split
   time_period_column_name: &time_period_column_name 'time_period'
+  number_of_nan_values: 100 # How many NaNs will be inserted
+
+preprocess_script_file: src/preprocess.py
+
+preprocess:
+  input_folder: *input_folder
+  input_file: *input_file
+  output_reference_data_file_path: &output_reference_data_file_path "data/preprocessed_reference_data.csv" # The preprocessed reference data file path
+  output_current_data_file_path: &output_current_data_file_path "data/preprocessed_current_data.csv"       # The preprocessed current data file path
+  rename_map:                                                          # New names for the columns
+    number_project: number_of_projects
+    time_spend_company: time_spend_in_company
+    Work_accident: had_work_accidents
+    left: &prediction_column left_or_not
+    promotion_last_5years: promoted_last_5_years
+    Department: department
+  prediction_column: *prediction_column
+  keep_duplicates: true                  # Should one keep the duplicate rows or not
+  time_period_column_name: *time_period_column_name
   # The file with the dictionary used later on by Flask API to build the html template  
   flask_dict_file_path: &flask_dict_file_path "data/flask_dictionary.json"
   # The file with the dictionary for the column names one-hot transformation
