--- a/dvc.yaml
+++ b/dvc.yaml
@@ -7,15 +7,15 @@ stages:
     outs:
     - ${mlflow_experiment_name_file_path}
 
-  # download:
+  # create_dataset:
   #   cmd: python ${download_script_file}
   #   deps:
   #   - params.yaml
-  #   - ${download_script_file}
+  #   - ${create_dataset}
   #   params:
-  #    - download
+  #    - create_dataset
   #   outs:
-  #   - ${download.download_folder}/${download.download_file}
+  #   - ${create_dataset.download_folder}/${download.download_file}
 
   preprocess:
     cmd: python ${preprocess_script_file}
@@ -23,7 +23,7 @@ stages:
     - params.yaml
     - ${mlflow_experiment_name_file_path}
     - ${preprocess_script_file}
-    - ${download.download_folder}/${download.download_file} 
+    - ${create_dataset.download_folder}/${create_dataset.download_file} 
     params:
     - preprocess 
     outs:
